update update avatar api
